<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FixTheFridge</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login</string>
    <string name="name_title">Name</string>
    <string name="email_title">email</string>
    <string name="nickname_title">Nickname</string>
    <string name="confirm_password">confirm password</string>
    <string name="nickname">Nick name</string>
    <string name="password_title">password</string>
    <string name="ok_button">OK</string>
    <string name="open_an_account_button">Create</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">Create account</string>

    <!-- Post idea -->
    <string name="new_idea_header">Post an Idea</string>
    <string name="create_idea_title">Title</string>
    <string name="create_idea_description">Description (optional)</string>
    <string name="post_idea">Post!</string>
    <string name="attach_picture">attach picture</string>
    <string name="refresh">Refresh</string>


    <!--Navbar !-->

    <string name="drawer_open">Display categories</string>
    <string name="drawer_close">Hide categories</string>


        <string-array name="idea_categories">
            <item>Newest ideas</item>
            <item>Hottest ideas</item>
        </string-array>


    <!-- Post Item! -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="votes">Votes: </string>
    <string name="comments">Comments: </string>
    
    
    <!-- Post Detail !-->
    <string name="like">Like</string>
    <string name="comment_hint">Write your comment</string>
    <string name="send_comment">Send comment</string>


</resources>
