<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/sign_in"
        android:icon="@drawable/ic_login"
        android:orderInCategory="1"
        android:title="@string/sign_in"
        app:showAsAction="always" />
    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_post_idea"
        android:orderInCategory="2"
        android:title="@string/post_idea"
        app:showAsAction="always" />
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"></item>
</menu>
