<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <EditText
        android:id="@+id/nickNameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:layout_marginTop="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_title"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password_title"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:onClick="createAccount"
        android:text="@string/open_an_account_button" />
</LinearLayout>