<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <EditText
        android:id="@+id/ideaTitleContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:textAlignment="textStart"
        android:hint="@string/create_idea_title"
        android:singleLine="true"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/ideaDescriptionContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:lines="5"
        android:gravity="top"
        android:hint="@string/create_idea_description"
        android:singleLine="false"
        >
    </EditText>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attachImageView"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/attach"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="attachPicture"
        android:text="@string/attach_picture" />

    <Button
        android:id="@+id/postIdeaButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="createAccount"
        android:text="@string/post_idea" />


</LinearLayout>