<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity" >



    <EditText
        android:id="@+id/textLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_title"
        android:inputType="textEmailAddress"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/textPassw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password_title"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPassw"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/ok_button" />

    <Button
        android:id="@+id/buttonOpenAnAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOk"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/create_account" />

</LinearLayout>